[gd_scene load_steps=4 format=3 uid="uid://b3mew4dsvxeib"]

[ext_resource type="Script" uid="uid://bld0w0fbak8a0" path="res://Enemies/Bosses/Boss3/boss3bullet.gd" id="1_1wp7k"]
[ext_resource type="Texture2D" uid="uid://kqkfvcqave4g" path="res://Enemies/Bosses/Boss3/assets/BoosMeteor3Special.webp" id="1_08sab"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_1wp7k"]
size = Vector2(22, 30)

[node name="Boss3Bullet" type="Area2D"]
script = ExtResource("1_1wp7k")
metadata/_edit_group_ = true

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("1_08sab")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_1wp7k")

[node name="Timer" type="Timer" parent="."]
wait_time = 3.0
one_shot = true
autostart = true

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
